# MM

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  netlify.toml  pyproject.toml  pytest.ini  railway.json  requirements-api.txt  requirements.txt
.github/workflows/: daily_pipeline.yml  pr_tests.yml
Documents/MM/: .gitignore  CLAUDE.md  pyproject.toml
docs/plans/: 2026-03-11-code-review-and-browser-test.md  2026-03-12-autonomous-intel-flags.md  2026-03-12-madness-matrix-full-overhaul.md  2026-03-12-madness-matrix-overhaul-design.md  2026-03-12-real-data-api-integration.md
frontend/: next.config.js  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/: colors.test.ts  constellation.test.ts  matchup.test.ts  nav.test.ts
frontend/app/: page.tsx
frontend/e2e/: app.spec.ts
frontend/lib/: api-types.ts  api.ts  bracket-utils.ts  colors.ts  mock-data.ts  ncaa-filter.ts  queries.ts  supabase.ts  team-data.ts
scripts/: sweep.py  warm_cache.py
src/: cli.py
src/api/: bracket_2026.py  bracket_runner.py  data_cache.py  graph_builder.py  intel_engine.py  schemas.py  server.py
src/backtesting/: backtesting.py
src/betting/: kelly.py  leverage.py
src/data/: barttorvik.py  conference_rpi.py  hoopmath.py  injury_feed.py  kaggle_ingestion.py  ncaa_roster_feed.py  news_scraper.py
src/graph/: edge_features.py  node_features.py
src/model/: bayesian_head.py  calibration.py  ensemble.py  gat_encoder.py  skellam.py  temporal_encoder.py
src/pipeline/: __init__.py  github_actions_runner.py  (+1 more)
tasks/: lessons.md
tests/: test_no_stubs.py
(+135 files in other folders)
