[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-stgnn"
version = "0.1.0"
description = "NCAA March Madness ST-GNN + Bayesian Predictor"
authors = [
    { name="User", email="user@example.com" }
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
mm = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
]
